# swinv2-mask2former-drone

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  Run.ipynb  exp.ipynb  flyte_workflow.py  notebook.ipynb  notebook.py  pyproject.toml
.github/workflows/: docker-publish.yml
data/: model_area.geojson
data/stage1_ramp_sample/labels/: 000a2c26-ed08-48b0-9df7-b292d021577d.geojson  00a80b97-35a8-48ae-9d76-14737448d817.geojson  00a8ff92-a6c7-4cf7-a1b7-ed0651e8de3b.geojson  0a073183-251a-4019-9193-4da1df746237.geojson  0a14ea3b-3ca0-48df-996d-7ca113ae6a44.geojson  0a1e4ac2-17f0-459b-90f8-e44083eeb6b7.geojson  0a397a8b-1288-4c4e-9f30-7e2887abb1bc.geojson  0a4abf87-832f-4f28-b3b8-80cf0d320a2a.geojson  0a4c73a3-8b5d-43d0-9c6b-122e07a70dc2.geojson  0a4cfbef-e541-42c9-b497-8ba8e8d13e2c.geojson  0a50990e-4148-44d9-9b04-789243dd9750.geojson  0a6e7c23-d7b7-40d7-972b-4a1eb148d7c1.geojson  0a73c042-97aa-4ab5-88ef-e54eaf1ef6d3.geojson  0a9ec5ee-b8fc-4090-9669-ffd71af93d67.geojson  0aa13255-14aa-4f53-b056-1afcfb0d7825.geojson  0aaa8aa8-b099-402a-a4a0-6647fa79228c.geojson  0ab847e2-7ab4-40bf-9681-ec12aa5684fe.geojson  0ad6fab4-93ac-4f0f-8140-3abd1c96b4be.geojson  0ade5280-8501-4c29-96ee-de7f98a222f2.geojson
data/stage1_ramp_sample/source/: 000a2c26-ed08-48b0-9df7-b292d021577d.tif  00a80b97-35a8-48ae-9d76-14737448d817.tif  00a8ff92-a6c7-4cf7-a1b7-ed0651e8de3b.tif  0a073183-251a-4019-9193-4da1df746237.tif  0a14ea3b-3ca0-48df-996d-7ca113ae6a44.tif  (+16 more)
docs/: Model_architecture.md  mlops.md
src/: config.py  stage1.py  stage1_foundation.py  stage2_finetune.py  utils.py
(+16 files in other folders)
