[project]
name = "high-res-building-seg-swinv2-mask2former"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kornia>=0.8.2", # for the hausdorff distance loss
    "marimo>=0.19.6",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "peft>=0.18.1", # this is for LORA
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchgeo>=0.8.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
